# store-yew-axum

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  fly.toml
backend/: Cargo.toml
backend/src/: config.rs  db.rs  error.rs  main.rs  seed.rs
backend/src/models/: admin.rs  mod.rs  order.rs  product.rs
backend/src/routes/: auth.rs  captcha.rs  mod.rs  orders.rs  products.rs
backend/src/security/: admin_extractor.rs  headers.rs  jwt.rs  mod.rs  password.rs  rate_limit_captcha.rs
frontend/: Cargo.toml  Trunk.toml  index.html  index.scss
frontend/src/: api.rs  app.rs  captcha_gate.rs  cart.rs  format.rs  main.rs
frontend/src/components/: footer.rs  mod.rs  navbar.rs  product_card.rs
frontend/src/pages/: admin_gate.rs  admin_orders.rs  admin_products.rs  admin_shell.rs  checkout.rs  home.rs  mod.rs  not_found.rs  product_detail.rs
shared/src/: lib.rs
