[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }

axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace", "limit"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

mongodb = "3"
bson = "2"

argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
time = "0.3"

chrono = "0.4"
dashmap = "6"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
