[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }

yew = { version = "0.23", features = ["csr"] }
yew-router = "0.20"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

gloo-net = "0.7"
gloo-storage = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
] }
